# yapfm

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  README.md  index.html  mkdocs.yml  ps  ps --no-merges  pyproject.toml  sitemap.xml
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  publish.yml
CHANGELOG/: index.html
CONTRIBUTING/: index.html
PERFORMANCE_FEATURES/: index.html
advanced/: index.html
advanced/advanced_context_management/: index.html
advanced/caching_performance/: index.html
advanced/custom_strategies/: index.html
advanced/memory_management/: index.html
advanced/mixins_deep_dive/: index.html
advanced/performance_optimization/: index.html
advanced/plugin_architecture/: index.html
advanced/proxy_pattern/: index.html
advanced/thread_safety/: index.html
advanced_features/: index.html
api/: index.html
api/core_classes/: index.html
api/exceptions/: index.html
api/helpers/: index.html
api/merge_strategies/: index.html
api/mixins/: index.html
api_reference/: index.html
docs/: CHANGELOG.md  CONTRIBUTING.md  PERFORMANCE_FEATURES.md  README.md  advanced_features.md  api_reference.md  examples.md  index.md  installation.md  quick_start.md  roadmap.md  troubleshooting.md  user_guide.md
examples/: index.html
installation/: index.html
quick_start/: index.html
roadmap/: index.html
search/: search_index.json
tests/: __init__.py  test_manager_batch_operations.py  test_manager_unified_api.py  test_proxy.py
troubleshooting/: index.html
usage_examples/: index.html
user_guide/: index.html
(+194 files in other folders)
