[project]
name = "yapfm"
version = "0.1.0"
description = ""
authors = [
    {name = "Ephraim Seddor",email = "seddorephraim7@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
]

[tool.poetry]
packages = [{include = "yapfm", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-cov = "^7.0.0"
ruff = "^0.12.12"
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.17.1"
commitizen = "^4.8.4"
pre-commit = "^4.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
